--- a/03_regressions/02_STERGM_reproducible_cultural_goods.Rmd
+++ b/03_regressions/02_STERGM_reproducible_cultural_goods.Rmd
@@ -17,12 +17,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Steps of STERGM:
-
 1. Loading `network`, `igraph`, `intergraph` and `reshape2` packages
 2. Making the distance network as a network object with edge weights as distances
-3. Making three adjacency matrices with binary values for common colonizer, common language, and contiguity
+3. Making four adjacency matrices with binary values for common colonizer, colonizer, common language, and contiguity
 4. Defining a function to add node attributes to the networks
-5. Loading the edgelist of reproducible cultural goods, and making 24 network objects for 24 consecutive years following the steps,     + Keeping only the pairs with positive weights
+5. Loading the edgelist of reproducible cultural goods trade, and making 24 network objects for 24 consecutive years following the steps,     
+    + Keeping only the pairs with positive weights
     + Subsetting the dataframe with only 'iso_o' and 'iso_d' column
     + Making an igraph object and assigning node attributes from the function created in the third step
     + Sanity checking (is the node names character objects, is the number of node names equal to the number of nodes, the  names of the node attributes etc.)
@@ -30,9 +30,11 @@ knitr::opts_chunk$set(echo = TRUE)
 6. Detaching the igraph package and loading `sna` and `tergm` packages
 7. Converting all 24 igraph objects to network objects
 8. Checking the node attributes for all of the networks
-9. Running STERGM 
-10. Calculating odds ratios, standard errors, and confidence intervals
-11. Plotting goodness of fit and MCMC statistics
+9. Making RTA adjacency matrices for all 24 years and converting it to a networkDynamic object. 
+10. Making Hysteresis adjacency matrices for all 24 years and converting it to a networkDynamic object.
+11. Running STERGM, calculating odds ratios, standard errors, and confidence intervals, and plotting goodness of fit and MCMC statistics
+12. Running STERGM with hysteresis effect, calculating odds ratios, standard errors, and confidence intervals, and plotting goodness of fit and MCMC statistics 
+
 
 ```{r}
 library(network)
@@ -534,95 +536,10 @@ library(networkDynamic)
 ```
 
 
-#Hysteresis Effect
-I am hashing the following chunk of codes that create a network dynamic object for hysteresis effect of reproducible cultural goods trade, which takes more than an hour to run. For faster reproducibility, I have saved it in 'results' folder and am loading it from there in the following code block along with 'RTA' network dynamic object. 
 
-```{r}
-#hyst_repro <- read.csv("../data/cleaned/edgelist_repro_hyst.csv",stringsAsFactors = FALSE)
-
-#hyst_repro_n0 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-#set.edge.value(hyst_repro_n0, "X2000", hyst_repro$X2000)
-
-# hyst_repro_n1 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n1, "X2001", hyst_repro$X2001)
-# 
-# hyst_repro_n2 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n2, "X2002", hyst_repro$X2002)
-# 
-# hyst_repro_n3 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n3, "X2003", hyst_repro$X2003)
-# 
-# hyst_repro_n4 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n4, "X2004", hyst_repro$X2004)
-# 
-# hyst_repro_n5 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n5, "X2005", hyst_repro$X2005)
-# 
-# hyst_repro_n6 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n6, "X2006", hyst_repro$X2006)
-# 
-# hyst_repro_n7 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n7, "X2007", hyst_repro$X2007)
-# 
-# hyst_repro_n8 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n8, "X2008", hyst_repro$X2008)
-# 
-# hyst_repro_n9 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n9, "X2009", hyst_repro$X2009)
-# 
-# hyst_repro_n10 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n10, "X2010", hyst_repro$X2010)
-
-# hyst_repro_n11 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n11, "X2011", hyst_repro$X2011)
-# 
-# hyst_repro_n12 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n12, "X2012", hyst_repro$X2012)
-# 
-# hyst_repro_n13 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n13, "X2013", hyst_repro$X2013)
-# 
-# hyst_repro_n14 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n14, "X2014", hyst_repro$X2014)
-# 
-# hyst_repro_n15 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n15, "X2015", hyst_repro$X2015)
-# 
-# hyst_repro_n16 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n16, "X2016", hyst_repro$X2016)
-# 
-# hyst_repro_n17 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n17, "X2017", hyst_repro$X2017)
-# 
-# hyst_repro_n18 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n18, "X2018", hyst_repro$X2018)
-# 
-# hyst_repro_n19 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n19, "X2019", hyst_repro$X2019)
-# 
-# hyst_repro_n20 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n20, "X2020", hyst_repro$X2020)
-
-# hyst_repro_n21 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n21, "X2021", hyst_repro$X2021)
-# 
-# hyst_repro_n22 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n22, "X2022", hyst_repro$X2022)
-# 
-# hyst_repro_n23 <- network(hyst_repro[, c("iso_o", "iso_d")], directed = TRUE, matrix.type = "edgelist", loops = FALSE)
-# set.edge.value(hyst_repro_n23, "X2023", hyst_repro$X2023)
-# 
-# #get.edge.value(hyst_repro_n23, "X2023")
-# class(hyst_repro_n23)
-
-# net_dynamic_hyst_r <- networkDynamic(network.list = list(hyst_repro_n0, hyst_repro_n1, hyst_repro_n2, hyst_repro_n3, hyst_repro_n4, hyst_repro_n5, hyst_repro_n6, hyst_repro_n7, hyst_repro_n8, hyst_repro_n9, hyst_repro_n10, hyst_repro_n11, hyst_repro_n12, hyst_repro_n13, hyst_repro_n14, hyst_repro_n15, hyst_repro_n16, hyst_repro_n17, hyst_repro_n18, hyst_repro_n19, hyst_repro_n20, hyst_repro_n21, hyst_repro_n22, hyst_repro_n23),  verbose = TRUE)
-
-#saveRDS(net_dynamic_hyst_r, file = "../results/net_dynamic_hyst_r.rds")
-```
 
 ```{r}
 net_dynamic_rta <- readRDS("../results/net_dynamic_rta.rds")
-net_dynamic_hyst_r <- readRDS("../results/net_dynamic_hyst_r.rds")
 ```
 
 
@@ -669,6 +586,12 @@ End: 28 july, 2025 at 2:20PM
 repro_stgm <- readRDS("../results/reproducible_stgm2.rds")
 ```
 
+```{r}
+summary(repro_stgm)
+```
+
+
+
 
 ```{r}
 or_r <- exp(coef(repro_stgm))
@@ -685,17 +608,20 @@ colnames(dataframe_r1) <- c('Estimates_r','lCI_r', 'odds_r','uCI_r', 'pvals_r', 
 ```
 
 ```{r}
-#write.csv(dataframe_r1, "../results/reproducible_stgm2_results.csv")
+write.csv(dataframe_r1, "../results/reproducible_stgm2_results.csv")
 ```
 
+```{r}
+dataframe_r1
+```
 
 
 
 ## Goodness of fit statistics
 
 ```{r}
-# AIC(repro_stgm)[1]
-# BIC(repro_stgm)[1]
+AIC(repro_stgm)[1]
+BIC(repro_stgm)[1]
 ```
 
 
