--- a/03_regressions/01_STERGM_unique_cultural_goods.Rmd
+++ b/03_regressions/01_STERGM_unique_cultural_goods.Rmd
@@ -70,9 +70,10 @@ set.edge.value(dist_net, "log_dist", dist_1$log_dist)
 ```
 
 ```{r}
-summary(dist_net)
+#summary(dist_net)
 #get.edge.value(dist_net, "log_dist")
 ```
+
 # Unique culture Goods trade edgelist
 ```{r}
 u <- read.csv("../data/cleaned/unique_edgelist.csv", header = TRUE, as.is = TRUE, stringsAsFactors = FALSE)
@@ -94,16 +95,12 @@ attify <- function(n_net, attr_df){
   V(n_net)$iso_o <- V(n_net)$name
   idx <- match(V(n_net)$name, attr_df$iso_o)
   V(n_net)$country <- attr_df$Country[idx]
-  V(n_net)$D_log_gdp <- attr_df$D_log_gdp[idx]
   V(n_net)$D_log_gdp_pct <- attr_df$D_log_gdp_pct[idx]
-  V(n_net)$log_population <- attr_df$log_population[idx]
-  V(n_net)$log_trade_gdp_ratio <- attr_df$log_trade_gdp_ratio[idx]
   V(n_net)$landlocked <- attr_df$landlocked[idx]
   V(n_net)$continent <- attr_df$continent[idx]
-  V(n_net)$lat <- attr_df$lat[idx]
-  V(n_net)$lon <- attr_df$lon[idx]
+  V(n_net)$continent <- attr_df$continent[idx]
   V(n_net)$development <- attr_df$development[idx]
-  
+  V(n_net)$langoff_1 <- attr_df$langoff_1[idx]
   return(n_net)
 }
 
@@ -471,15 +468,6 @@ is.character(V(un23)$name)
 length(unique(att2023$iso_o)) == length(unique(V(un23)$name))
 ```
 
-
-
-
-
-
-
-
-
-#
 # Converting to network object,
 ```{r}
 net_un00 <- intergraph::asNetwork(un00)
@@ -645,8 +633,6 @@ class(net_dynamic_rta)
 
 
 
-
-
 # Estimating STERGM
 Started: 28 July, 2025 at 8:19 PM
 Ended: 29 July, 2025 at 5AM (approximately)
@@ -681,15 +667,21 @@ Ended: 29 July, 2025 at 5AM (approximately)
 ```
 
 ```{r}
-#print(summary(unique_stgm))
-```
+#saveRDS(unique_stgm1, "../results/unique_stgm1.rds")
 
-```{r}
-#saveRDS(unique_stgm, "../results/unique_stgm1.rds")
 unique_stgm <- readRDS("../results/unique_stgm1.rds")
 ```
+
+
+
+
 ```{r}
-summary(unique_stgm)
+print(summary(unique_stgm))
+```
+
+
+```{r}
+#dim(dist_net)
 ```
 
 
@@ -716,8 +708,9 @@ dataframe_u1
 ```
 
 ```{r}
-#write.csv(dataframe_u1, "../results/unique_stgm1_results.csv")
+write.csv(dataframe_u1, "../results/unique_stgm1_results.csv")
 ```
+
 
 
 ```{r}
@@ -725,19 +718,15 @@ AIC(unique_stgm)[1]
 BIC(unique_stgm)[1]
 ```
 
+
 ```{r}
-mcmc.diagnostics(unique_stgm)
+#goftest_u <- gof(unique_stgm) 
 ```
 
 ```{r}
-# goftest <- gof(unique_stgm) 
-# plot(goftest)
-# 
-# saveRDS(goftest, "../results/goftest_model1_u.rds")
-```
-
-```{r}
-goftest <- readRDS("../results/goftest_model1_u.rds")
+#saveRDS(goftest_u, "../results/goftest_model1_u.rds")
+goftest_u <- readRDS("../results/goftest_model1_u.rds")
+#plot(goftest_u)
 ```
 
 
@@ -753,7 +742,7 @@ all_stats <- c("odegree", "idegree", "espartners", "distance", "model")
 selected_stats <- all_stats[2:5]
 
 
-tiff(file = "../results/goftest_model1_u.tiff",
+tiff(file = "../results/goftest_unique.tiff",
      width = 12, height = 3, units = "in", res = 100)
 
 par(mfrow = c(1, 4),
@@ -761,7 +750,7 @@ par(mfrow = c(1, 4),
     oma = c(0.2, 1, 0.2, 1))
 
 for (stat in selected_stats) {
-  plot(goftest, which = stat, main = "Model 1", cex.lab = 1.5)
+  plot(goftest_u, which = stat, main = "Model 1", cex.lab = 1.5)
 }
 
 dev.off()
