--- a/02_eda/06_world _map.Rmd
+++ b/02_eda/06_world _map.Rmd
@@ -17,6 +17,8 @@ library(dplyr)
 library(sf)
 library(tidyverse) 
 library(patchwork)
+library(ggnewscale)
+library(sf)
 ```
 
 # Getting the world map data with ISO# codes and extracting country boundaries with st_as_if() function
@@ -50,37 +52,38 @@ merged23 <- merge(world_map_sf, att2023, by.x= "id", by.y = "iso_o", all.x = TRU
 table(is.na(merged00$development))
 table(is.na(merged23$development))
 ```
-# Export
+# Exports
 ```{r}
-p1 <- ggplot(merged00) +
-  geom_sf(aes(fill = outdegree_unique.degree)) +
-  scale_fill_continuous(low = "white", high = "#000080", name = "WOC(unique) 2000", na.value = "white") +
-  ggtitle("Exporters of unique cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-p2 <- ggplot(merged23) +
-  geom_sf(aes(fill = outdegree_unique.degree)) +
-  scale_fill_continuous(low = "white", high = "#000080", name = "WOC(unique) 2020", na.value = "white") +
-  ggtitle("Exporters of unique cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-p3 <- ggplot(merged00) +
-  geom_sf(aes(fill = outdegree_repro.degree)) +
-  scale_fill_gradient(low = "white", high = "#4daf4a", name = "WOC(reproducible) 2000", na.value = "white") +
-  ggtitle("Exporters of reproducible cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-p4 <- ggplot(merged23) +
-  geom_sf(aes(fill = outdegree_repro.degree)) +
-  scale_fill_gradient(low = "white", high = "#4daf4a", name = "WOC(reproducible) 2020", na.value = "white") +
-  ggtitle("Exporters of reproducible cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-p5 <- ggplot(merged00) +
-  geom_sf(aes(fill = outdegree_total.degree)) +
-  scale_fill_gradient(low = "white", high = "#a65628", name = "WOC(non-cultural) 2000", na.value = "white") +
-  ggtitle("Exporters of non-cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-p6 <- ggplot(merged23) +
-  geom_sf(aes(fill = outdegree_total.degree)) +
-  scale_fill_gradient(low = "white", high = "#a65628", name = "WOC(non-cultural) 2020", na.value = "white") +
-  ggtitle("Exporters of non-cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
+p1 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(outdegree_unique.degree)), aes(fill = outdegree_unique.degree)) +
+      scale_fill_continuous(low = "white", high = "#000080", name = "WOC(unique) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(outdegree_unique.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of unique cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+p2 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(outdegree_unique.degree)), aes(fill = outdegree_unique.degree)) +
+      scale_fill_continuous(low = "white", high = "#000080", name = "WOC(unique) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(outdegree_unique.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of unique cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+p3 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(outdegree_repro.degree)), aes(fill = outdegree_repro.degree)) +
+      scale_fill_continuous(low = "white", high = "#4daf4a", name = "WOC(reproducible) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(outdegree_repro.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of reproducible cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+p4 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(outdegree_repro.degree)), aes(fill = outdegree_repro.degree)) +
+      scale_fill_continuous(low = "white", high = "#4daf4a", name = "WOC(reproducible) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(outdegree_repro.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of reproducible cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+p5 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(outdegree_total.degree)), aes(fill = outdegree_total.degree)) +
+      scale_fill_continuous(low = "white", high = "#a65628", name = "WOC(non-cultural) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(outdegree_total.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of non-cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+p6 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(outdegree_total.degree)), aes(fill = outdegree_total.degree)) +
+      scale_fill_continuous(low = "white", high = "#a65628", name = "WOC(non-cultural) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(outdegree_total.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Exporters of non-cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
 ```
 
 ```{r}
@@ -92,9 +95,15 @@ export <- (p1 | p2) / (p3 | p4) / (p5 | p6) +
     legend.key.size = unit(0.2, "cm"),
     legend.text = element_text(size = 6),
     legend.title = element_text(size = 8),
-    legend.position = "right")
-
+    legend.position = "right"
+  )
 ```
+
+
+```{r}
+p5
+```
+
 
 ```{r}
 export
@@ -108,35 +117,36 @@ ggsave("../results/Fig2.tiff", plot = export, device = "tiff", width = 12, heigh
 
 # Import
 ```{r}
-q1 <- ggplot(merged00) +
-  geom_sf(aes(fill = indegree_unique.degree)) +
-  scale_fill_continuous(low = "white", high = "#000080", name = "WIC(unique) 2000", na.value = "white") +
-  ggtitle("Importers of unique cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-q2 <- ggplot(merged23) +
-  geom_sf(aes(fill = indegree_unique.degree)) +
-  scale_fill_continuous(low = "white", high = "#000080", name = "WIC(unique) 2020", na.value = "white") +
-  ggtitle("Importers of unique cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-q3 <- ggplot(merged00) +
-  geom_sf(aes(fill = indegree_repro.degree)) +
-  scale_fill_gradient(low = "white", high = "#4daf4a", name = "WIC(reproducible) 2000", na.value = "white") +
-  ggtitle("Importers of reproducible cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-q4 <- ggplot(merged23) +
-  geom_sf(aes(fill = indegree_repro.degree)) +
-  scale_fill_gradient(low = "white", high = "#4daf4a", name = "WIC(reproducible) 2020", na.value = "white") +
-  ggtitle("Importers of reproducible cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-q5 <- ggplot(merged00) +
-  geom_sf(aes(fill = indegree_total.degree)) +
-  scale_fill_gradient(low = "white", high = "#a65628", name = "WIC(non-cultural) 2000", na.value = "white") +
-  ggtitle("Importers of non-cultural products 2000") + theme(plot.title = element_text(size = 11, face = "bold"))
-  
-q6 <- ggplot(merged23) +
-  geom_sf(aes(fill = indegree_total.degree)) +
-  scale_fill_gradient(low = "white", high = "#a65628", name = "WIC(non-cultural) 2020", na.value = "white") +
-  ggtitle("Inporters of non-cultural products 2023") + theme(plot.title = element_text(size = 11, face = "bold"))
+q1 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(indegree_unique.degree)), aes(fill = indegree_unique.degree)) +
+      scale_fill_continuous(low = "white", high = "#000080", name = "WIC(unique) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(indegree_unique.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of unique cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+q2 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(indegree_unique.degree)), aes(fill = indegree_unique.degree)) +
+      scale_fill_continuous(low = "white", high = "#000080", name = "WIC(unique) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(indegree_unique.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of unique cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+q3 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(indegree_repro.degree)), aes(fill = indegree_repro.degree)) +
+      scale_fill_continuous(low = "white", high = "#4daf4a", name = "WIC(reproducible) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(indegree_repro.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of reproducible cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+q4 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(indegree_repro.degree)), aes(fill = indegree_repro.degree)) +
+      scale_fill_continuous(low = "white", high = "#4daf4a", name = "WIC(reproducible) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(indegree_repro.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of reproducible cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+q5 <- ggplot(merged00) + geom_sf(data = merged00 %>% filter(!is.na(indegree_total.degree)), aes(fill = indegree_total.degree)) +
+      scale_fill_continuous(low = "white", high = "#a65628", name = "WIC(non-cultural) 2000") + new_scale_fill() + geom_sf(data = merged00       %>% filter(is.na(indegree_total.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of non-cultural products 2000") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
+q6 <- ggplot(merged23) + geom_sf(data = merged23 %>% filter(!is.na(indegree_total.degree)), aes(fill = indegree_total.degree)) +
+      scale_fill_continuous(low = "white", high = "#a65628", name = "WIC(non-cultural) 2023") + new_scale_fill() + geom_sf(data = merged23       %>% filter(is.na(indegree_total.degree)), aes(fill = "NA"), show.legend = TRUE) + scale_fill_manual(name = NULL, values =         c("NA" = "grey"), labels = "NA") + 
+      ggtitle("Importers of non-cultural products 2023") + 
+      theme(plot.title = element_text(size = 11, face = "bold"))
+
 ```
 
 ```{r}
